--- a/package.json
+++ b/package.json
@@ -7,12 +7,13 @@
   },
   "author": "",
   "license": "ISC",
-  "description": "",
   "dependencies": {
     "parcel": "^2.12.0"
   },
   "devDependencies": {
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.14"
-  }
+  },
+  "main": "tailwind.config.js",
+  "description": ""
 }
