--- a/package.json
+++ b/package.json
@@ -6,14 +6,14 @@
     "start": "parcel src/index.html",
     "build": "parcel build src/index.html"
   },
-  "author": "",
+  "author": "Pawel Jeziorowski",
   "license": "ISC",
   "dependencies": {
     "parcel": "^2.13.0"
   },
   "devDependencies": {
-    "postcss": "^8.4.47",
-    "tailwindcss": "^3.4.14"
+    "postcss": "^8.4.49",
+    "tailwindcss": "^3.4.15"
   },
   "main": "tailwind.config.js",
   "description": ""
