--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "my-repository",
   "version": "1.0.0",
+  "description":"",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "parcel src/index.html",
-    "build": "parcel build src/index.html"
+    "start": "parcel dev src/*.html",
+    "build": "parcel build src/*.html"
   },
   "author": "Pawel Jeziorowski",
   "license": "ISC",
