--- a/package.json
+++ b/package.json
@@ -3,10 +3,14 @@
   "version": "1.0.0",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "parcel src/index.html",
-    "build": "parcel build src/index.html"
+    "start": "parcel src/*.html",
+    "build": "parcel build src/*.html"
   },
   "author": "Pawel Jeziorowski",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "devDependencies": {
+    "postcss": "^8.4.49",
+    "tailwindcss": "^3.4.15"
+  }
 }
