--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "parcel": "^2.13.2"
+    "parcel": "^2.13.2",
+    "svgo": "^3.3.2"
   },
   "devDependencies": {
     "postcss": "^8.4.49",
