--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "parcel src/index.html",
-    "build": "parcel build src/index.html"
+    "build": "parcel build src/index.html --public-url=https://jeziorowskipawelporfolio.netlify.app/"
   },
   "author": "Pawel Jeziorowski",
   "license": "ISC",
