--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "author": "Pawel Jeziorowski",
   "license": "ISC",
-  "description": "",
+  "description": "My personal portfolio",
   "dependencies": {
     "parcel": "^2.13.2",
     "svgo": "^3.3.2"
@@ -16,5 +16,6 @@
   "devDependencies": {
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.15"
-  }
+  },
+  "main": "tailwind.config.js"
 }
